--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     		slides: [ // Slideshow Images
     			{
     				image: 'photos/Aerial-001.jpg',
-    				title: 'Ronald Reagan Washington National Airport (DCA)',
+    				title: 'Ronald Reagan Washington National Airport (DCA) - HI LM',
     				thumb: 'photos/Aerial-001.jpg'
     			}, {
     				image: 'photos/Aerial-002.jpg',
